2007-08-21  Torsten Rahn  <rahn@kde.org>

	* src/lib/CMakeLists.txt:
	- Library Version number: 0.4.0

2007-08-21  Inge Wallin  <inge@lysator.liu.se>

	Rename files according to the coding standards: TinyWebBrowser
	* src/lib/tinywebbrowser.cpp: renamed into TinyWebBrowser.cpp
	* src/lib/tinywebbrowser.h:   renamed into TinyWebBrowser.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/PlaceMarkInfoDialog.ui: use new name

	Rename files according to the coding standards: VectorComposer
	* src/lib/vectorcomposer.cpp: renamed into VectorComposer.cpp
	* src/lib/vectorcomposer.h:   renamed into VectorComposer.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleModel.h: use new name
	* src/lib/ViewParams.cpp: use new name

	Rename files according to the coding standards: VectorMap
	* src/lib/vectormap.cpp: renamed into VectorMap.cpp
	* src/lib/vectormap.h:   renamed into VectorMap.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleModel.cpp: use new name
	* src/lib/VectorComposer.cpp: use new name

2007-08-21  Torsten Rahn  <rahn@kde.org>

	* CMakeLists.txt:
	- Fixing the multilib issue for real.

2007-08-21  Torsten Rahn  <rahn@kde.org>

	* src/lib/CMakeLists.txt:
	  texcolorizer->TextureColorizer
	  Fix "elseif".
	* src/lib/texcolorizer.{cpp,h}: 
	  texcolorizer->TextureColorizer

2007-08-21  Inge Wallin  <inge@lysator.liu.se>

	Rename files according to the coding standards: XmlHandler
	* src/lib/xmlhandler.cpp: renamed into XmlHandler.cpp
	* src/lib/xmlhandler.h:   renamed into XmlHandler.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleModel.cpp: use new name
	* src/lib/PlaceMarkManager.cpp: use new name

	Fix errors on Windows.
	* src/lib/gps/GpxFile.cpp (add*): Use dynamic casts instead of
	C-style casts

	Remove obsolete class: SearchComboBox
	* src/lib/searchcombobox.cpp: remove
	* src/lib/searchcombobox.h: remove
	* src/lib/CMakeLists.txt:  Reflect removal
